# dataEngineeringTestLibs02

./: .gitignore  README.md
dashboardplus1/: pyproject.toml
hexcrudmicroservice/: .env.example  .env.example2  README.md  docker-compose.yml  docker-compose_kafka_bitnami.yml  docker-compose_kafka_conf.yml  dockerfile  environment.yml  environment_redis.yml  makefile  pyproject.toml
hexcrudmicroservice/src/: main.py  validar_redis.py
hexcrudmicroservice/src/application/: item_service.py
hexcrudmicroservice/src/domain/: entities.py
hexcrudmicroservice/src/domain/ports/: logger.py  repository.py
hexcrudmicroservice/src/infrastructure/cache/: base.py  dragonfly_adapter.py  redis_adapter.py  valkey_adapter.py
hexcrudmicroservice/src/infrastructure/logging/: console_handler.py  elasticsearch_handler.py  kafka_handler.py
hexcrudmicroservice/src/tests/: radarchart.py  test_integration.py  test_item_service.py
