[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dashboardplus"
version = "0.1.0"
description = "Hexagonal CRUD microservice with swappable cache and logging"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0.0",
    "aiokafka>=0.11.0",
    "elasticsearch[async]>=8.10.0",
    "structlog>=24.0.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "flet>=0.84.0",
    "matplotlib>=3.10.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
